k8s/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yes-wms-uat
  namespace: uat
  labels:
    app: yes-wms
    environment: uat
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
  selector:
    app: yes-wms
    environment: uat
