k8s/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yes-wms-uat
  namespace: uat
  labels:
    app: yes-wms
    environment: uat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "160"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "160"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wms-uatk.yes.tech
      secretName: yes-wms-uat-tls
  rules:
    - host: wms-uatk.yes.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yes-wms-uat
                port:
                  number: 8000
